remove unneeded dependency, fix contact page overflow, hide sensitive info

--- a/shinobi-frontend/src/Components/Contact/ContactPage.css
+++ b/shinobi-frontend/src/Components/Contact/ContactPage.css
@@ -1,6 +1,6 @@
 .contact-page {
   flex-direction: column;
-  width: 100vw;
+  width: 99vw;
   max-width: 80rem;
   margin-bottom: 4.5rem;
 }
